fixed the spacing problem with #info section. got it to look like the desktop mock desing

--- a/CapstoneProject/Build-Website-Using-HTML-CSS-GitHubPages-Path/assets/css/style.css
+++ b/CapstoneProject/Build-Website-Using-HTML-CSS-GitHubPages-Path/assets/css/style.css
@@ -1,18 +1,36 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+
 * {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Rubik';
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
 body {
+    width: 100%;
+    margin: 0 auto;
+    
 }
+
+h1, h2, h3 {
+    color: #404040;
+}
+
+p {
+    color: #696969;
+}
+
+a {
+    text-decoration: none;
+}
+
+/* Header */
 
 header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 100%;
     height: 64px;
     padding-left: 24px;
     padding-right: 24px;
@@ -52,17 +70,17 @@ header {
 /* Hero */
 
 #hero {
-    width: 100%;
-    background-color: #d3d3d3;
+    width: auto;
+    background-color: lightgray;
     display: flex;
-    align-items: center;
-    padding: 32px 24px;
 }
 
 #hero #banner {
     width: 60%;
-    height: auto;
-    margin-right: 24px;
+    padding-left: 24px;
+    padding-top: 32px;
+    padding-right: 24px;
+    padding-bottom: 32px;
 }
 
 .hero_text {
@@ -84,36 +102,71 @@ header {
 }
 
 .hero_text button {
-    font-size: 16px;
-    width: 80%;
-    background-color: #a9a9a9;
+    font-size: 24px;
+    width: 60%;
+    background-color: #404040;
+    color: #fff;
     padding: 8px 0;
 }
 
 /* Info sectioni */
 #info {
-    border: 1px solid black;
-    display: flex;
-    padding: 32px 24px;
-    width: 60%;
+    display: grid;
+    grid-template-columns: 60% 40%;
 }
 
-.info_container {
-    margin-left: 24px;
-    width: 40%;
-    border-left: 1px solid gray;
+#info .practice img {
+    width: 100%;
+    padding-left: 24px;
+    padding-top: 32px;
+    padding-right: 24px;
+    padding-bottom: 32px;
 }
 
-.info_details {
+#info .practice_text {
+    width: 77%;
+    padding-left: 24px;
+    padding-bottom: 32px;
+}
+
+#info .practice_text h2 {
+    font-size: 40px;
+    padding-bottom: 24px;
+}
+
+#info .practice_text p {
+
+    font-size: 22px;
+}
+
+#info .info_container {
+    border-left: 1px solid lightgray;
+}
+
+#info .info_container .info_details {
     display: flex;
+}
+
+#info .info_container .info_details img {
+    width: 35%;
+    height: auto;
     padding: 16px;
+
 }
 
-.info_details img {
-    margin-right: 16px;
+#info .info_container .info_details .info_text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
-.info_text {
-    border: 1px solid black;
-    width: 60%;
+#info .info_container .info_details h3, #info .info_container .info_details p {
+    padding-bottom: 8px;
 }
+
+#info .info_container .detail3 {
+    background-color: lightgray;
+}
+
+
+
